# RaspberryPicoSvelte

./: README.md  WebWithBuild.code-workspace
Frontend/: package-lock.json  package.json
Server/: .gitignore  README.md
Server/src/: CMakeLists.txt  htmldata.c  main.c
